--- a/SatelliteApp/SatelliteApp/Windows/SettingWindow.xaml
+++ b/SatelliteApp/SatelliteApp/Windows/SettingWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SatelliteApp.Windows"
         mc:Ignorable="d"
-        Title="Настройки" Height="470" Width="800" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" Closing="Window_Closing">
+        Title="Настройки" Height="450" Width="800" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" Closing="Window_Closing">
     <Border BorderThickness="1" BorderBrush="Black">
-        <TabControl TabStripPlacement="Left" SelectionChanged="TabControl_SelectionChanged">
+        <TabControl TabStripPlacement="Left">
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal" Height="80" Width="220">
@@ -16,26 +16,6 @@
                     </StackPanel>
                 </TabItem.Header>
                 <StackPanel>
-                    <!--<StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Скорость(по умолчанию):"></TextBlock>
-                        <ComboBox Name="CBSpeed" SelectedIndex="{Binding SpeedIndexSetting, Mode=TwoWay}">
-                            <ComboBoxItem Content="300"></ComboBoxItem>
-                            <ComboBoxItem Content="1200"></ComboBoxItem>
-                            <ComboBoxItem Content="2400"></ComboBoxItem>
-                            <ComboBoxItem Content="4800"></ComboBoxItem>
-                            <ComboBoxItem Content="9600"></ComboBoxItem>
-                            <ComboBoxItem Content="19200"></ComboBoxItem>
-                            <ComboBoxItem Content="38400"></ComboBoxItem>
-                            <ComboBoxItem Content="57600"></ComboBoxItem>
-                            <ComboBoxItem Content="74880"></ComboBoxItem>
-                            <ComboBoxItem Content="115200"></ComboBoxItem>
-                            <ComboBoxItem Content="230400"></ComboBoxItem>
-                            <ComboBoxItem Content="250000"></ComboBoxItem>
-                            <ComboBoxItem Content="500000"></ComboBoxItem>
-                            <ComboBoxItem Content="1000000"></ComboBoxItem>
-                            <ComboBoxItem Content="2000000"></ComboBoxItem>
-                        </ComboBox>
-                    </StackPanel>-->
                     <GroupBox Width="350" HorizontalAlignment="Left">
                         <GroupBox.Header>
                             <CheckBox Content="Звуковое уведомление о потере сигнала" Name="CBTimeNotification" Click="CheckBox_Click"></CheckBox>
@@ -162,19 +142,8 @@
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal" Height="80" Width="220">
-                        <Image Source="/Assets/Icons/360.png" Width="90" Height="65" Margin="5" />
-                        <Grid Width="87">
-                        <Grid.RowDefinitions>
-                                <RowDefinition Height="*"></RowDefinition>
-                                <RowDefinition Height="20"></RowDefinition>
-                                <RowDefinition Height="20"></RowDefinition>
-                                <RowDefinition Height="*"></RowDefinition>
-                        </Grid.RowDefinitions>
-                            
-                            <TextBlock Text="Поворотное" FontWeight="Bold" Grid.Row="1" Margin="5,2,0,2"></TextBlock>
-                            <TextBlock Text="устройство" FontWeight="Bold" Grid.Row="2" Height="28" Margin="5,2,5,10" Grid.RowSpan="2"></TextBlock>
-
-                         </Grid>
+                        <Image Source="/Assets/Icons/Rotator.png" Width="90" Height="65" Margin="5" />
+                        <TextBlock Text="Поворотное устройство" TextWrapping="Wrap" FontWeight="Bold" Width="100"></TextBlock>
                     </StackPanel>
                 </TabItem.Header>
                 <Grid>
@@ -193,22 +162,22 @@
                     </Grid.RowDefinitions>
                             <StackPanel Orientation="Horizontal" Grid.Row="0">
                                 <TextBlock Text="Хост" Width="120"></TextBlock>
-                                <TextBox Width="150" Name="TBHost"></TextBox>
+                                <TextBox Width="150" Name="TBHost" Text="{Binding DeviceUrl}"></TextBox>
                             </StackPanel>
                     
                             <StackPanel Orientation="Horizontal" Grid.Row="1">
                             <TextBlock Text="Широта" Width="120"></TextBlock>
-                            <TextBox Width="150" Name="TBLat"></TextBox>
+                                <TextBox Width="150" Name="TBLat" Text="{Binding HomeLat}"></TextBox>
                         </StackPanel>
                         
                    
                     <StackPanel Orientation="Horizontal" Grid.Row="2">
                         <TextBlock Text="Долгота" Width="120"></TextBlock>
-                        <TextBox Width="150" Name="TBLong"></TextBox>
+                                <TextBox Width="150" Name="TBLong" Text="{Binding HomeLong}"></TextBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Grid.Row="3">
                             <TextBlock Text="Высота над морем" Width="120"></TextBlock>
-                            <TextBox Width="150" Name="TBAlt"></TextBox>
+                                <TextBox Width="150" Name="TBAlt" Text="{Binding HomeAlt}"></TextBox>
                         </StackPanel>
 
 
