--- a/SatelliteApp/SatelliteApp/Windows/MainWindow.xaml
+++ b/SatelliteApp/SatelliteApp/Windows/MainWindow.xaml
@@ -62,20 +62,24 @@
                 <Grid Grid.Row="1">
                     <CheckBox Content="Центр карты в новой точке" IsChecked="True" Name="CBNewPointInCenter"></CheckBox>
                 </Grid>
-                
-                
+
+
                 <StackPanel Grid.Column="1" Width="40" VerticalAlignment="Bottom">
                     <Button Width="30" Height="30" Content="+" TextBlock.FontWeight="Bold" TextBlock.FontSize="15" Name="BtnMapZoomPlus" Click="BtnMapZoomPlus_Click"/>
                     <Button Width="30" Height="30" Content="-" TextBlock.FontWeight="Bold" TextBlock.FontSize="15" Name="BtnMapZoomMinus" Click="BtnMapZoomMinus_Click"/>
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="6*"/>
+                    <ColumnDefinition Width="19*"/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <TextBox Grid.Row="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Name="TBData" IsReadOnly="True"></TextBox>
-                <StackPanel Grid.Row="1">
+                <TextBox Grid.Row="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Name="TBData" IsReadOnly="True" Grid.ColumnSpan="2"></TextBox>
+                <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"></ColumnDefinition>
